--- a/SCME.WpfControlLibrary/Styles/Colors.xaml
+++ b/SCME.WpfControlLibrary/Styles/Colors.xaml
@@ -4,6 +4,9 @@
     <Color x:Key="Purple1">#FF8C0095</Color>
     <Color x:Key="Purple2">#FF9F40DE</Color>
     <Color x:Key="Purple3">#FFB100BA</Color>
+
+    <Color x:Key="ListViewTestParametersColor">#FF8C0095</Color>
+    <Color x:Key="WhiteColor">White</Color>
     
     <Color x:Key="Blue1">#FF00A7FF</Color>
     
@@ -20,7 +23,9 @@
     <SolidColorBrush x:Key="PurpleBrush2" Color="{StaticResource Purple2}" ></SolidColorBrush>
     <SolidColorBrush x:Key="PurpleBrush3" Color="{StaticResource Purple3}" ></SolidColorBrush>
     
-    <SolidColorBrush x:Key="ListViewTestParametersBrush" Color="{StaticResource Purple1}" ></SolidColorBrush>
+    <SolidColorBrush x:Key="ListViewTestParametersBrush"  Color="{StaticResource ListViewTestParametersColor}" ></SolidColorBrush>
+    <SolidColorBrush x:Key="WhiteColorBrush"  Color="{StaticResource WhiteColor}" ></SolidColorBrush>
+    
     <SolidColorBrush x:Key="ListViewItemTestParametersBrush" Color="{StaticResource Purple2}" ></SolidColorBrush>
     <SolidColorBrush x:Key="ButtonWithIconBrush" Color="{StaticResource Purple2}" ></SolidColorBrush>
     
