--- a/SCME.WpfControlLibrary/Styles/Label.xaml
+++ b/SCME.WpfControlLibrary/Styles/Label.xaml
@@ -1,11 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Colors.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
     <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
         <Setter Property="FontFamily" Value="{DynamicResource SCME.DefaultFont}" />
         <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type ListView}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
+                <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
+            </DataTrigger>
+        </Style.Triggers>
     </Style>
-    
+
     <Style TargetType="Label" x:Key="LabelIconButton" BasedOn="{StaticResource {x:Type Label}}">
         <Setter Property="Foreground" Value="White" />
         <Setter Property="HorizontalAlignment" Value="Center"/>
