--- a/SCME.WpfControlLibrary/Styles/NumericUpDown.xaml
+++ b/SCME.WpfControlLibrary/Styles/NumericUpDown.xaml
@@ -4,6 +4,10 @@
                     xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
                     xmlns:converters="clr-namespace:MahApps.Metro.Converters;assembly=MahApps.Metro">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Colors.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
     <converters:ThicknessBindingConverter x:Key="ThicknessBindingConverter" />
 
     <Style TargetType="{x:Type myControls:NumericUpDown}">
@@ -13,7 +17,6 @@
         <Setter Property="controls:ControlsHelper.FocusBorderBrush" Value="{DynamicResource TextBoxFocusBorderBrush}" />
         <Setter Property="controls:ControlsHelper.MouseOverBorderBrush" Value="{DynamicResource TextBoxMouseOverBorderBrush}" />
         <Setter Property="controls:TextBoxHelper.ButtonFontSize" Value="{DynamicResource SCME.BaseFontSize}" />
-        <Setter Property="controls:TextBoxHelper.ButtonWidth" Value="22" />
         <Setter Property="controls:TextBoxHelper.IsMonitoring" Value="True" />
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="FontFamily" Value="{DynamicResource ContentFontFamily}" />
@@ -23,6 +26,7 @@
         <Setter Property="MinHeight" Value="26" />
         <Setter Property="MinWidth" Value="62" />
         <Setter Property="Padding" Value="1" />
+        <Setter Property="Opacity" Value="1"></Setter>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden" />
         <Setter Property="SnapsToDevicePixels" Value="true" />
@@ -111,6 +115,9 @@
                         </Grid>
                     </Grid>
                     <ControlTemplate.Triggers>
+                        <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type ListView}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
+                            <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
+                        </DataTrigger>
                         <Trigger Property="ButtonsAlignment" Value="Left">
                             <Setter TargetName="PART_Buttons" Property="Grid.Column" Value="0" />
                             <Setter TargetName="PART_Buttons" Property="Margin"
@@ -122,8 +129,12 @@
                             <Setter TargetName="PART_TextBoxColumn" Property="Width" Value="Auto" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Opacity" Value="1"></Setter>
                             <Setter TargetName="PART_Buttons" Property="Visibility" Value="Hidden" />
-                            <Setter Property="BorderBrush" Value="Transparent" />
+                            <!--<Setter Property="BorderBrush" Value="Transparent" />-->
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="True">
+                            <Setter Property="Opacity" Value="1"></Setter>
                         </Trigger>
                         <Trigger Property="IsReadOnly" Value="True">
                             <Setter Property="InterceptArrowKeys" Value="False" />
@@ -148,8 +159,8 @@
                             <Setter TargetName="PolygonUp" Property="Fill" Value="{DynamicResource WhiteBrush}" />
                         </Trigger>
                         <Trigger SourceName="PART_NumericDown" Property="IsMouseOver" Value="True">
-                            <Setter TargetName="PART_NumericDown" Property="Background" Value="{DynamicResource GrayBrush8}" />
-                            <Setter TargetName="PolygonDown" Property="Fill" Value="{DynamicResource AccentColorBrush}" />
+                            <Setter TargetName="PART_NumericDown" Property="Background" Value="{DynamicResource BlackBrush}" />
+                            <Setter TargetName="PolygonDown" Property="Fill" Value="{DynamicResource WhiteBrush}" />
                         </Trigger>
                         <Trigger SourceName="PART_NumericDown" Property="IsPressed" Value="True">
                             <Setter TargetName="PART_NumericDown" Property="Background" Value="{DynamicResource BlackBrush}" />
