--- a/SCME.WpfControlLibrary/Styles/TreeViewItemProfile.xaml
+++ b/SCME.WpfControlLibrary/Styles/TreeViewItemProfile.xaml
@@ -1,5 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Colors.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+    
     <Style TargetType="TreeViewItem" BasedOn="{StaticResource {x:Type TreeViewItem}}">
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="Template">
@@ -35,22 +39,17 @@
                                     </Style>
                                 </ToggleButton.Style>
                             </ToggleButton>
-                            <Border x:Name="Bd"
-                                    HorizontalAlignment="Stretch"
-                                    BorderBrush="{TemplateBinding Border.BorderBrush}"
-                                    Padding="{TemplateBinding Control.Padding}"
-                                    Background="{TemplateBinding Panel.Background}"
-                                    SnapsToDevicePixels="True"
-                                    Grid.Column="1">
-                                <ContentPresenter x:Name="PART_Header"
+                           
+                            <Path Stretch="Fill" Grid.Column="1" Grid.Row="0" x:Name="SelectPath" Fill="{StaticResource PurpleBrush3}" Visibility="Collapsed" Data="M 0,0 L 100,0 L 102.5, 5 L 100,10 L 0,10"/>
+                                <ContentPresenter Grid.Column="1" Grid.Row="0"  x:Name="PART_Header"
                                                   Content="{TemplateBinding HeaderedContentControl.Header}"
                                                   ContentTemplate="{TemplateBinding HeaderedContentControl.HeaderTemplate}"
                                                   ContentStringFormat="{TemplateBinding HeaderedItemsControl.HeaderStringFormat}"
                                                   ContentTemplateSelector="{TemplateBinding HeaderedItemsControl.HeaderTemplateSelector}"
                                                   ContentSource="Header"
-                                                  HorizontalAlignment="{TemplateBinding Control.HorizontalContentAlignment}"
+                                                  HorizontalAlignment="Stretch"
                                                   SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
-                            </Border>
+                          
                             <ItemsPresenter x:Name="ItemsHost"
                                             Grid.Column="1"
                                             Grid.Row="1" />
@@ -71,6 +70,7 @@
                         </Trigger>
                         <Trigger Property="TreeViewItem.IsSelected" Value="True">
                             <Setter Property="TextElement.Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
+                            <Setter TargetName="SelectPath" Property="Visibility" Value="Visible"></Setter>
                         </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
