--- a/SCME.ProfileBuilder/Pages/SelectEditModePage.xaml
+++ b/SCME.ProfileBuilder/Pages/SelectEditModePage.xaml
@@ -19,19 +19,23 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="{StaticResource SCME.DistanceBetweenPanelButton}"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="200"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
-        <Button Grid.Column="1" Grid.Row="1" Style="{StaticResource PurpleButton}" Content="{x:Static res1:Resources.EditProfiles}" Click="EditProfile_OnClick"/>
-        <Button Grid.Column="1" Grid.Row="3" Style="{StaticResource PurpleButton}" Content="{x:Static res1:Resources.EditProfileBindings}" Click="EditProfileMme_OnClick" />
+        <Button Grid.Column="1" Grid.Row="1"  Style="{StaticResource FlatButtonAllSize}"  Background="{StaticResource SelectEditModePageButtonBrush}" Click="EditProfile_OnClick">
+            <TextBlock Text="{x:Static res1:Resources.EditProfiles}" TextWrapping="Wrap"></TextBlock>
+        </Button>
+        <Button Grid.Column="3" Grid.Row="1"  Click="EditProfileMme_OnClick" Style="{StaticResource FlatButtonAllSize}" Background="{StaticResource SelectEditModePageButtonBrush}">
+            <TextBlock Text="{x:Static res1:Resources.EditProfileBindings}" TextWrapping="Wrap"></TextBlock>
+        </Button>
         
         <!-- <customControls:PanelButton Grid.Column="1" Grid.Row="1" Caption="qweqwe" Background="Chartreuse"/> -->
         <!-- <Button Grid.Column="1" Grid.Row="1"> -->
