--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/RACDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/RACDataTemplate.xaml
@@ -12,9 +12,9 @@
     <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
             <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
