--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/TOUDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/TOUDataTemplate.xaml
@@ -11,9 +11,9 @@
              d:DesignWidth="800">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
             <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
