--- a/SCME.WpfControlLibrary/Styles/Button.xaml
+++ b/SCME.WpfControlLibrary/Styles/Button.xaml
@@ -1,19 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-    <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Common.xaml"></ResourceDictionary>
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Common.xaml" />
     </ResourceDictionary.MergedDictionaries>
+
     
     <Style x:Key="ButtonWithIcon" TargetType="Button">
-        <Setter Property="Background" Value="{StaticResource ButtonWithIconBrush}"/>
+        <Setter Property="Background" Value="{StaticResource ButtonWithIconBrush}" />
         <Setter Property="Height" Value="{DynamicResource SCME.SizeButtonWithIcon}" />
         <Setter Property="Width" Value="{DynamicResource SCME.SizeButtonWithIcon}" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
     </Style>
-    
-    <Style x:Key="BaseFlatButton" TargetType="Button">
-        <Setter Property="BorderThickness" Value="0"/>
+
+    <Style x:Key="BaseFlatButton" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+        <Setter Property="BorderThickness" Value="0" />
         <Setter Property="FontSize" Value="{DynamicResource BaseFontSize}" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -22,7 +23,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Border x:Name="Overlay" Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -40,17 +41,39 @@
         </Style.Triggers>
     </Style>
     
+    <Style x:Key="FlatButtonAllSize" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="FontSize" Value="{DynamicResource BaseFontSize}" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="HorizontalContentAlignment" Value="Center" />
+    </Style>
+
+    <Style x:Key="AllSizeWrapButton" TargetType="Button" BasedOn="{StaticResource BaseFlatButton}">
+        <Setter Property="Height" Value="Auto" />
+        <Setter Property="ContentTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <TextBlock Text="{TemplateBinding Content}" TextWrapping="Wrap" />
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="SelectEditModePageButton" TargetType="Button" BasedOn="{StaticResource AllSizeWrapButton}">
+        <Setter Property="Background" Value="{StaticResource SelectEditModePageButtonBrush}" />
+    </Style>
+
+
     <Style x:Key="PrimaryButton" TargetType="Button" BasedOn="{StaticResource BaseFlatButton}">
-        <Setter Property="Background" Value="{StaticResource BlueBrush}"></Setter>
+        <Setter Property="Background" Value="{StaticResource BlueBrush}" />
     </Style>
-    
+
     <Style x:Key="PurpleButton" TargetType="Button" BasedOn="{StaticResource BaseFlatButton}">
-    <Setter Property="Background" Value="{StaticResource PurpleBrush1}"></Setter>
+        <Setter Property="Background" Value="{StaticResource PurpleBrush1}" />
     </Style>
-    
+
     <Style x:Key="BackButton" TargetType="Button" BasedOn="{StaticResource BaseFlatButton}">
-        <Setter Property="Background" Value="{StaticResource BlueBrush}"/>
+        <Setter Property="Background" Value="{StaticResource BlueBrush}" />
     </Style>
-    
-    
+
+
 </ResourceDictionary>
