--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
@@ -18,9 +18,10 @@
     </Grid.Resources>
     <Grid.ColumnDefinitions>
         <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
+        <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
+        <ColumnDefinition Width="30" SharedSizeGroup="Column2"/>
+        <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
+        <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
         <RowDefinition Height="auto" />
@@ -38,29 +39,29 @@
 
     <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.TestType}" />
     <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource BvtTestTypes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding TestType}" />
-    <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.CurrentLimit_mA}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="0" Value="{Binding CurrentLimit }" />
+    <Label Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.CurrentLimit_mA}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="0" Value="{Binding CurrentLimit }" />
 
     <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitD_V}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1" Value="{Binding VoltageLimitD }" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}" />
-    <Label Grid.Column="2" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="1" Value="{Binding VoltageLimitR}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}" />
+    <Label Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding VoltageLimitR}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}" />
 
     <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.PlateTime_ms}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="2" Value="{Binding PlateTime}" />
-    <Label Grid.Column="2" Grid.Row="2" Content="{x:Static res:Resources.Rampup_Vms}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="2" Value="{Binding RampUpVoltage}" />
+    <Label Grid.Column="3" Grid.Row="2" Content="{x:Static res:Resources.Rampup_Vms}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="2" Value="{Binding RampUpVoltage}" />
 
     <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.StartVoltage_V}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding StartVoltage}" />
-    <Label Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.Frequency_Hz}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="3" Value="{Binding VoltageFrequency}" />
+    <Label Grid.Column="3" Grid.Row="3" Content="{x:Static res:Resources.Frequency_Hz}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="3" Value="{Binding VoltageFrequency}" />
 
     <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.FreqRate_Hz}" />
     <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Source={StaticResource FrequencyDivisors}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding FrequencyDivisor}" />
 
-    <Label Grid.Column="2" Grid.Row="4" Content="{x:Static res:Resources.Mode}" />
-    <ComboBox Grid.Column="3" Grid.Row="4" ItemsSource="{Binding Source={StaticResource BvtMeasurementModes}}"
+    <Label Grid.Column="3" Grid.Row="4" Content="{x:Static res:Resources.Mode}" />
+    <ComboBox Grid.Column="4" Grid.Row="4" ItemsSource="{Binding Source={StaticResource BvtMeasurementModes}}"
               DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding MeasurementMode}" />
 
 
@@ -81,8 +82,8 @@
         </customControls:NumericUpDown.Visibility>
     </customControls:NumericUpDown>
 
-    <Label Grid.Column="2" Grid.Row="6" Content="{x:Static res:Resources.MinVrrm_V}" Visibility="{Binding MeasurementMode, Converter={StaticResource Vrrm2V}}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="6" Value="{Binding VRRM}" Visibility="{Binding MeasurementMode, Converter={StaticResource Vrrm2V}}" />
+    <Label Grid.Column="3" Grid.Row="6" Content="{x:Static res:Resources.MinVrrm_V}" Visibility="{Binding MeasurementMode, Converter={StaticResource Vrrm2V}}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="6" Value="{Binding VRRM}" Visibility="{Binding MeasurementMode, Converter={StaticResource Vrrm2V}}" />
 
 
     <Label Grid.Column="0" Grid.Row="7" Content="{x:Static res:Resources.MaxIdrm_mA}">
@@ -102,11 +103,11 @@
         </customControls:NumericUpDown.Visibility>
     </customControls:NumericUpDown>
 
-    <Label Grid.Column="2" Grid.Row="7" Content="{x:Static res:Resources.MaxIrrm_mA}" Visibility="{Binding MeasurementMode, Converter={StaticResource Irrm2V}}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="7" Value="{Binding IRRM}" Visibility="{Binding MeasurementMode, Converter={StaticResource Irrm2V}}" />
+    <Label Grid.Column="3" Grid.Row="7" Content="{x:Static res:Resources.MaxIrrm_mA}" Visibility="{Binding MeasurementMode, Converter={StaticResource Irrm2V}}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="7" Value="{Binding IRRM}" Visibility="{Binding MeasurementMode, Converter={StaticResource Irrm2V}}" />
 
 
-    <CheckBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" Content="{x:Static res:Resources.UseUdsmUrsm}" IsChecked="{Binding UseUdsmUrsm}" />
+    <CheckBox Grid.Column="0"  Grid.Row="8" Grid.ColumnSpan="2"  Content="{x:Static res:Resources.UseUdsmUrsm}" IsChecked="{Binding UseUdsmUrsm}" />
 
 
   
