--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
@@ -19,9 +19,10 @@
     </Grid.Resources>
     <Grid.ColumnDefinitions>
         <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
+        <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
+        <ColumnDefinition Width="30" SharedSizeGroup="Column2"/>
+        <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
+        <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
         <RowDefinition Height="Auto" />
@@ -41,38 +42,38 @@
 
     <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Current_A}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1" Value="{Binding RampCurrent}" />
-    <Label Grid.Column="2" Grid.Row="1" Content="{x:Static res:Resources.Time_us}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="1" Value="{Binding RampTime}" />
+    <Label Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.Time_us}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding RampTime}" />
 
     <CheckBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" IsChecked="{Binding IsRampOpeningEnabled}" Content="{x:Static res:Resources.IsHeatEnabled}" />
 
     <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.HeatCurrent_A}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding RampOpeningCurrent }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-    <Label Grid.Column="3" Grid.Row="3" Content="{x:Static res:Resources.HeatTime_us}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="3" Value="{Binding RampOpeningTime }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+    <Label Grid.Column="4" Grid.Row="3" Content="{x:Static res:Resources.HeatTime_us}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="3" Value="{Binding RampOpeningTime }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
 
     
     <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.Current_A}" /> 
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="4" Value="{Binding SinusCurrent}" />
-    <Label Grid.Column="2" Grid.Row="4" Content="{x:Static res:Resources.Time_us}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="4" Value="{Binding SinusTime }" />
+    <Label Grid.Column="3" Grid.Row="4" Content="{x:Static res:Resources.Time_us}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="4" Value="{Binding SinusTime }" />
     
     
     <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.Current_A}" /> 
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="5" Value="{Binding CurveCurrent }" />
-    <Label Grid.Column="2" Grid.Row="5" Content="{x:Static res:Resources.Time_us}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="5" Value="{Binding CurveTime }" />
+    <Label Grid.Column="3" Grid.Row="5" Content="{x:Static res:Resources.Time_us}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="5" Value="{Binding CurveTime }" />
     
     <Label Grid.Column="0" Grid.Row="6" Content="{x:Static res:Resources.CurveFactor}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="6" Value="{Binding CurveFactor }" />
-    <Label Grid.Column="2" Grid.Row="6" Content="{x:Static res:Resources.AdditionalTime_us}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="6" Value="{Binding CurveAddTime }" />
+    <Label Grid.Column="3" Grid.Row="6" Content="{x:Static res:Resources.AdditionalTime_us}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="6" Value="{Binding CurveAddTime }" />
 
     <CheckBox Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" IsChecked="{Binding UseFullScale}" Content="{x:Static res:Resources.UseFullScale}" /> 
     
     <Label Grid.Column="0" Grid.Row="8" Content="{x:Static res:Resources.Count}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="8" Value="{Binding Count }" />
-    <Label Grid.Column="2" Grid.Row="8" Content="{x:Static res:Resources.MaxVtm_V}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="8" Value="{Binding VTM }" StringFormat="{}{0:N2}" />
+    <Label Grid.Column="3" Grid.Row="8" Content="{x:Static res:Resources.MaxVtm_V}" />
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="8" Value="{Binding VTM }" StringFormat="{}{0:N2}" />
     
 </Grid>
